--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.8.1",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
+    "next": "^15.1.8",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -43,5 +44,10 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
